Adding unit tests for Validation rules